# thinker

./: .gitignore  README.md  pyproject.toml
thinker/: main.py  prompts.py  schemas.py
