[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinker"
version = "0.1.0"
description = "Iterative philosophical thinker powered by Claude CLI"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
thinker = "thinker.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.0",
]
